- CHG: Faster revision graph startup. (Stefan Fuhrmann)
- CHG: Repository browser speedup by pre-loading contents. (Stefan Fuhrmann)
- CHG: Log cache size and load performance improvements. (Stefan Fuhrmann)
- CHG: Log CSV export formats timestamps as UTC strings. (Stefan Fuhrmann)
- CHG: 'Hide unrelated changed paths' now works across path copies as well.
       (Stefan Fuhrmann)
- NEW: new command line params for the log dialog
       to set the filter. (Stefan)
- NEW: new autoclose setting for local operations only. (Stefan)
- NEW: the log dialog turns references to revisions
       into links. (Stefan)
- NEW: block access to the status cache when in protected mode in
       Internet explorer on Vista and later. (Stefan)
- NEW: More options in the commit dialog to check
       different items. (Stefan)
- NEW: Load/Save function in TortoiseUDiff. (Stefan)
- NEW: Force option for merges. (Stefan)
- NEW: In the log dialog, an error message can be cleared with
       a doubleclick to view the received log messages 
       up to the error. (Stefan)
- NEW: url handler for TSVN commands. See issue #440 for details. (Stefan)
- NEW: column showing the file sizes in the status list control. (Stefan)
- NEW: Command to repair copies. (Stefan)
- NEW: The diff command is available in the explorer context menu
       for folders with property modifications. (Stefan)
- NEW: Repository browser shows svn:externals as sub-trees. (Stefan Fuhrmann)
- NEW: Improved filter in the log dialog. (Stefan)
- NEW: The state of the "hide unrelated changed paths" in the log
       dialog is remembered over sessions. (Stefan)
- NEW: TortoiseMerge disables the next/prev buttons if there are no
       next/previous diffs/conflicts. (Stefan)

Version 1.6.6
- CHG: Reduced disk access in the status cache. (Stefan)
- BUG: The /url parameter was ignored for import commands. (Stefan)
- BUG: Some project properites were not automatically added
       to newly added folders. (Stefan)